--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Primary Meta Tags -->
-    <title>H</title>
+    <title>🫨</title>
     <meta name="title" content="Pablo Moreno Inc.">
     <meta name="description"
           content="Hoi, this is my wesbite, sending energy to Internet">
@@ -32,7 +32,7 @@
 <body>
 
     <div class="text">
-        <span id="pm">Pablo Moreno</span>
+        <span id="pm">Pablo Moreno </span>
         <span>
             <span id="yearsAge" style="opacity: .6;"></span> <span style="opacity: .6;">years and </span><span
                   id="daysAge" style="opacity: .6;"></span> <span style="opacity: .6;">days on </span> 🌍</span></span>
@@ -42,11 +42,6 @@
     <img src="media/new-website-soon.webp" class="nws"
          alt="A pink paper with early skeches from the future website.">
 
-    <!-- <div id="street-view"></div>
-
-    <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnCsqqTyBfKn8bmxsC-Q7sJ47VzMfuH7I&callback=initialize&v=weekly"
-            defer></script> -->
 
     <script>
         function ageOfPablo() {
