--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Primary Meta Tags -->
-    <title>🫨</title>
+    <title></title>
     <meta name="title" content="Pablo Moreno Inc.">
     <meta name="description"
           content="Hoi, this is my wesbite, sending energy to Internet">
