--- a/newhouse/index.html
+++ b/newhouse/index.html
@@ -10,14 +10,15 @@
         body {
             margin: 0;
             background-color: yellowgreen;
-            padding: 16px;
+            padding: 24px 20px;
             font-family: sans-serif;
             display: flex;
             flex-direction: column;
             gap: 10px;
             padding-bottom: 90px;
-            max-width: 400px;
+            max-width: 500px;
             margin: auto;
+            box-sizing: border-box;
             /* font-size: 16px; */
         }
 
@@ -58,11 +59,11 @@
         }
 
         details p {
-            margin: 0;
-            background-color: rgba(0, 0, 0, 0.1);
-            padding: 12px;
+            padding: 16px;
             border-radius: 12px;
             width: 100%;
+            background-color: rgb(109, 10, 255);
+            color: white;
         }
 
         details img {
@@ -92,10 +93,10 @@
             left: 50%;
             transform: translateX(-50%);
             bottom: 0;
-            padding: 14px;
+            padding: 20px;
             box-sizing: border-box;
             background-color: yellowgreen;
-            max-width: 400px;
+            max-width: 500px;
             margin: auto;
             box-sizing: border-box;
         }
