--- a/sites.html
+++ b/sites.html
@@ -4,147 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔗 Websites by Pablo Moreno</title>
+    <title>🔗🔗🔗</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="PABLO ⚡️" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+
+    <!-- Links -->
+    <link rel="stylesheet" href="assets/css/reset.css">
+
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        h1 {
-            text-decoration: no;
-            font-size: 1.2rem;
-
-        }
-
-        h3 {
-            margin: 0;
-            margin-left: 16px;
+            font-size: 12px;
             padding: 0;
-            line-height: 1;
-            font-size: 16px !important;
-            font-weight: 400;
-            text-decoration: underline;
+            margin: 0;
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column-reverse;
         }
 
-        .nodispo {
-            color: blue;
-        }
-
-        .nodispo:hover {
-            text-decoration: line-through !important;
-            cursor: help !important;
-        }
-
-        @counter-style thumbs {
-            system: cyclic;
-            symbols: "❍";
-            suffix: " ";
-        }
-
-        ul {
-            list-style: thumbs;
-            margin: 6px 0 12px 0;
-            padding: 0 18px;
+        h6 {
+            font-size: 12px;
         }
 
         a {
             text-decoration: none;
-            width: fit-content;
+            color: inherit;
         }
 
-        a:hover {
-            text-decoration: underline;
+        div {
+            display: grid;
+            padding: 0 10px;
+            grid-template-columns: auto 1fr 1fr;
+            gap: 10px;
+            /* background-color: blue; */
+            transition: all .3s ease-in-out;
+        }
 
+        div:nth-child(odd) {
+            /* background-color: red; */
+        }
+
+        div:hover {
+            cursor: pointer;
+            background-color: black;
+            color: white;
+            transition: all 0s ease-in-out;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>🔗 Websites by Pablo Moreno (a.k.a pablo⚡️)</h1>
 
-    <h3>2024 (Amiens)</h3>
-    <ul>
-        <li><a href="cent-balles-pour-julie/">Cent balles pour Julie</a></li>
-        <li><a href="pablo-in-ams/">Pablo in AMS</a></li>
-        <li><a href="divider/">Divider</a></li>
-        <li><a href="https://face-tool.netlify.app/">Face Tool</a></li>
-        <li><a href="https://esadikoi.netlify.app/">Esadikoi</a></li>
-        <li><a href="portfolio/">Portfolio</a></li>
-        <li><a href="ventedete/">Vente d'été</a></li>
-        <li><a class="nodispo">Moreno Photos Family</a></li>
-        <li><a href="soutenance/">Soutenance</a></li>
-        <li><a href="https://blingmaker.netlify.app/">Angèle Blingmaker</a></li>
-        <li><a href="dansmapeau/">Dans ma peau</a></li>
-        <li><a href="https://club-mix-esad.netlify.app/">Club Mix ESAD</a></li>
-        <li><a href="https://a-map-of-inter.net/">A Map of Internet</a></li>
-        <li><a class="nodispo">Para Mateo</a></li>
-        <li><a href="https://copa-alzar.com/">Copa Alzar</a></li>
-        <li><a href="https://thewebwewant.online/">The Web We Want</a></li>
-        <li><a href="mirror/">Mirror</a></li>
-        <li><a href="executeur/">L'Executeur</a></li>
-        <li><a href="mixito/">Mixito</a></li>
-        <li><a href="https://web-pad.netlify.app/">Web Pad</a></li>
-    </ul>
+    <script src="assets/js/sites.js"></script>
 
-    <h3>2023 (Amiens)</h3>
-    <ul>
-        <li><a href="https://concluded-openspaces.netlify.app/">Concluded Openspaces</a></li>
-        <li><a href="https://collaborative-narratives.online/">Collaborative Narratives</a></li>
-        <li><a class="nodispo">Site x A.</a></li>
-        <li><a href="briançon/">Briançon</a></li>
-        <li><a href="map-extrapractice/">Map XP</a></li>
-        <li><a href="library-extrapractice/">Library XP</a></li>
-        <li><a href="https://fils-rouges.online/">Fils Rouges</a></li>
-        <li><a href="presence/">Presence</a></li>
-        <li><a href="bg/">BG</a></li>
-        <li><a class="nodispo">Carta para Dani</a></li>
-        <li><a href="threewords4eu/">Three Words 4 Europe</a></li>
-        <li><a href="twenty-six-hour-a-day/">Twenty six hour a day</a></li>
-        <li><a href="virtualisations/">Virtualisations</a></li>
-        <li><a href="https://calendarie2023.netlify.app/">Calendarie 2023</a></li>
-        <li><a href="playlist/">Playlist</a></li>
-        <li><a href="digital-stuff/">Digital Stuff</a></li>
-        <li><a href="lyrics/">Lyrics</a></li>
-        <li><a href="lune/">Lune</a></li>
-        <li><a class="nodispo">Ewcia</a></li>
-        <li><a class="nodispo">K&P</a></li>
-        <li><a href="pad/">Pad</a></li>
-    </ul>
-
-    <h3>2022 (Bilbao)</h3>
-    <ul>
-        <li><a href="wazzzup-world/">Wazzzup World</a></li>
-        <li><a href="sunday-sites/">Sunday Sites</a></li>
-        <li><a class="nodispo">Naia x Pablo</a></li>
-        <li><a href="web-archive/">Web Archive</a></li>
-    </ul>
-
-
-    <h3>2021 (Le Havre)</h3>
-    <ul>
-        <li><a href="glace-sans-tain/">Glace sans tain</a></li>
-        <li><a href="autre-temps/">Autre Temps</a></li>
-        <li><a class="nodispo">Julietta y Tristan</a></li>
-    </ul>
-
-    <h3>2020 (Le Havre)</h3>
-    <ul>
-        <li><a href="voeux2021/">Voeux 2021</a></li>
-        <li><a href="sunsets/">Sunsets</a></li>
-        <li><a href="captcha/">Captcha</a></li>
-        <li><a href="tott/">Tott</a></li>
-
-    </ul>
-
-    <h3>2019 (Bilbao)</h3>
-    <ul>
-        <li><a href="poeme-mer/">Poème Mer</a></li>
-    </ul>
-
-    <!-- <li><a href="xxx/">xxx</a></li> -->
-
-    </ul>
 </body>
 
 </html>
