--- a/nexthouse/index.html
+++ b/nexthouse/index.html
@@ -7,89 +7,7 @@
     <title>pablo and the next house</title>
     <link id="dynamic-favicon" rel="icon" href="">
 
-    <style>
-        :root {
-            --grey: #dcdcdc;
-            --green: #ABF35F;
-            --blue: #31AEF8;
-            --purple: #8E67D4;
-            --red: #C53747;
-            --yellow: #FFE643;
-            --orange: #FF7D3B;
-
-        }
-
-        body {
-            margin: 0;
-            font-size: 20px;
-            font-family: sans-serif;
-            padding: 24px 20px;
-            box-sizing: border-box;
-            background-color: #dcdcdc;
-            width: 100%;
-            overflow: hidden;
-
-            letter-spacing: -.8px;
-        }
-
-        h1 {
-            margin: 0;
-            font-weight: 400;
-            line-height: 90%;
-            font-size: 30px;
-        }
-
-        p {
-            margin: 0;
-        }
-
-        .enter {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: 100%;
-            padding: 24px 20px;
-            box-sizing: border-box;
-            position: fixed;
-            top: 0;
-            left: 0;
-            background-color: #ffffff21;
-            filter: blur;
-            backdrop-filter: blur(8px);
-            height: 100%;
-            justify-content: end;
-            border-radius: 0 0 14px 14px;
-        }
-
-        .enterOut {
-            transform: translateY(-100%);
-            transition: all 1s cubic-bezier(0.55, 0, 0, 1);
-        }
-
-        input {
-            font-size: 20px;
-            border: none;
-            background-color: inherit;
-            border-bottom: 1px solid black;
-            padding: 10px 0;
-        }
-
-        button {
-            font-size: 20px;
-            width: fit-content;
-            border: none;
-            padding: 8px 10px;
-            border-radius: 10px;
-            margin-top: 10px;
-            background-color: #c5c5c5;
-        }
-
-        .message {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
