--- a/remote/index.html
+++ b/remote/index.html
@@ -203,7 +203,7 @@
 
         // Show alert when clicking on #info
         document.getElementById('info').addEventListener('click', () => {
-            alert('Thanks for all ANALGUE 🔵! I was very lucky to be here :)');
+            alert('Thanks for all ANALOGUE! 🔵');
         });
 
 
