--- a/remote/index.html
+++ b/remote/index.html
@@ -18,7 +18,7 @@
     <style>
         body {
             background-color: #131314;
-            height: 100vh;
+            height: 100svh;
             width: 100vw;
             box-sizing: border-box;
             margin: 0;
